Running API tests often logs "Error while launching com.apple.WebKit.Networking: Connection invalid" https://bugs.webkit.org/show_bug.cgi?id=256278 rdar://108866781

Reviewed by Alex Christensen, Sihui Liu and Per Arne Vollan.

Go via the WebsiteDataStore to access the NetworkProcessProxy, like we usually
do now that the NetworkProcessProxy is owned by the WebsiteDataStore. The code
was calling `NetworkProcessProxy::ensureDefaultNetworkProcess()` directly,
which would construct a NetworkProcessProxy and destroy it right away since
it was not holding on to the RefPtr returned by ensureDefaultNetworkProcess().

In the case where we don't have a data store (prewarmed WebProcesss case), we
stash the NetworkProcess in a RefPtr data member to keep it alive until a
website data store gets assigned (at which point we transfer ownership to the
data store).

* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::didFinishLaunching):

Canonical link: https://commits.webkit.org/263698@main